--- a/utilities/styles.css
+++ b/utilities/styles.css
@@ -63,6 +63,10 @@ a:hover {
 
 /* styling for this site, we should probably use a style lib like styled components maybe */
 
+h1 { 
+  text-align: center;
+}
+
 button {
   margin: 15px;
   padding: 5px 10px;
@@ -72,4 +76,6 @@ button {
 
 div {
   margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
 }
