--- a/utilities/styles.css
+++ b/utilities/styles.css
@@ -9,8 +9,10 @@
 }
 
 html {
+  margin: 0;
   font-size: 90%;
   height: 100%;
+  background-color: #f0f0f0;
 }
 
 body {
@@ -38,6 +40,8 @@ body {
 
 #__next {
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 h1, h2, h3, h4, h5, h6, p, a, li {
